--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
+    <form class="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        placeholder="Image Search..."
+        required
+      />
+      <button type="submit">Search</button>
+    </form>
+    <div class="loader"></div>
+    <div class="gallery"></div>
+    <button class="load-more">Load more</button>
+    <p class="end-message">
+      We're sorry, but you've reached the end of search results.
+    </p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
